ajout de l'affichage avec filtres

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,6 +37,9 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="menu-filter"> <!-- Ajout d'un div pour contenir les boutons filtres -->
+			<button id="reset">Tous</button> <!-- Ajout d'un bouton "reset" pour afficher tous les travaux -->
+		</div> 
 		<div class="gallery">
 		</div>
 	</section>
