--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<li><a href="./admin.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -38,7 +38,7 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="menu-filter"> <!-- Ajout d'un div pour contenir les boutons filtres -->
-			<button id="reset">Tous</button> <!-- Ajout d'un bouton "reset" pour afficher tous les travaux -->
+			<button id="reset" class="selected">Tous</button> <!-- Ajout d'un bouton "reset" pour afficher tous les travaux -->
 		</div> 
 		<div class="gallery">
 		</div>
