--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -39,7 +39,7 @@
 	<section id="portfolio">
 		<div class="menuAdminContainer">
 			<h2>Mes Projets</h2>
-			<a href="#modal" class="js-modal" id="lien-modifier"><i class="fa-solid fa-pen-to-square"></i> Modifier</a>
+			<a href="#modal" class="js-modal" id="lien-modifier" style="display: none;"><i class="fa-solid fa-pen-to-square"></i> Modifier</a>
 		</div>
 
 		<aside id="modal1" class="modal" aria-labelledby="titleModal" aria-hidden="true" role="dialog" style="display: none;"> <!-- Aria-hidden pour indiquer que le contenu n'est pas visible; role = définir l'objectif de la div -->
@@ -47,70 +47,37 @@
 				<div class="iconContainer"><i class="fa-solid fa-arrow-left" id="arrow-left-add-real" style="display: none;"></i><i class="fa-solid fa-arrow-left" id="arrow-left-add-confirm" style="display: none;"></i><i class="fa-solid fa-xmark"></i></div>
 				<h1 id="titleModal">Interface Administateur</h1>
 
-				<!--  Modal 1 -->
+				<!--  Modal 1 - Galerie pour supprimer les réalisations -->
 				<div class="editableGalleryContainer">
 					<h2>Galerie Photo</h2>
 					<div class="editableGallery"></div>
 					<button id="btn-add-photo" class="selected">Ajouter une photo</button>
 				</div>
-
 				<!--  Fin Modal 1 -->
-
-				<!--  Modal 2 -->
-
+				<!--  Modal 2 - Formulaire d'envoie vers l'API -->
 				<div class="addRealisation" style="display: none;">
 					<h2>Ajout Photo</h2>
 					<form>
 						<div class="insertPhotoContainer">
 							<i class="fa-regular fa-image"></i>
 							<label for="name" id="btn-insert-file">+ Ajouter photo<input type="file" name="name" id="name" class="input-file"></label>
-
 							<p>jpg, png : 4mo max</p>
 							<p id="fileName"></p>
 						</div>
-
-						<label for="text" class="label">Titre</label>
-						<input type="text" name="text" id="image-title">
-
-						<label for="categories" class="label">Catégorie</label>
-						<select name="categories" id="image-categorie" aria-placeholder="Choisissez la categorie">
-							<option value="" disabled selected>Choisissez la categorie</option>
-						</select>
-
-						<button disabled id="buttonAddARealisation" style="background-color: grey; cursor: not-allowed;" >Valider</button>
-					</form>
-				</div>
-
-				<!--  Fin Modal 2 -->
-
-				<!--  Modal 3 -->
-
-				<div class="addConfirmRealisation" style="display: none;">
-					<h2>Confirm Ajout Photo</h2>
-					<form action="" method="post">
-						<div class="insertPhotoContainer">
-							<!-- img -->
+						<div class="photoContainerPreview" style="display: none;">
 							<img src="" alt="Photo à enregistrer" id="photo-preview">
 						</div>
-
 						<label for="text" class="label">Titre</label>
-						<input type="text" name="text" id="image-title-confirm">
-
+						<input type="text" name="text" id="image-title">
 						<label for="categories" class="label">Catégorie</label>
-						<select name="categories" id="image-categorie-confirm" aria-placeholder="Choisissez la categorie">
-							<option value="" disabled selected>Choisissez la categorie</option>
-						</select>
-
-						<button disabled id="buttonAddARealisationFinal" style="background-color: grey; cursor: not-allowed;" >Valider</button>
+						<select name="categories" id="image-categorie" aria-placeholder="Choisissez la categorie"></select>
+						<button id="buttonAddARealisation" style="background-color: grey; cursor: not-allowed;" >Valider</button>
 					</form>
 				</div>
-
-				<!-- Fin  Modal 3 -->
-
+				<!--  Fin Modal 2 -->
 			</div>
 		</aside>
-
-		<div class="menu-filter"> <!-- Ajout d'un div pour contenir les boutons filtres -->
+		<div class="menu-filter"> <!-- Ajout d'une div pour contenir les boutons filtres -->
 			<button id="reset" class="selected">Tous</button> <!-- Ajout d'un bouton "reset" pour afficher tous les travaux -->
 		</div>
 		<div class="gallery">
@@ -135,6 +102,7 @@
 	<nav>
 		<ul>
 			<li>Mentions Légales</li>
+			<li id="logout">logout</li>
 		</ul>
 	</nav>
 </footer>
