Ajout du lien logout + Désactivation des boutons quand session logué + ajout du bandeau noir en TOP quand session est logué

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,14 +12,20 @@
 	<script type="module" src="./assets/js/works.js" defer></script>
 	<script src="https://kit.fontawesome.com/4fdf36eee2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+	<div id="banner" style="display: none;">
+		<i class="fa-regular fa-pen-to-square"></i>
+		<p>Mode édition</p>
+	</div>
 <header>
+	
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="./admin.html">login</a></li>
+			<li><a href="./admin.html" id="login">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -104,7 +110,6 @@
 	<nav>
 		<ul>
 			<li>Mentions Légales</li>
-			<li id="logout">logout</li>
 		</ul>
 	</nav>
 </footer>
